day-15/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    # resources: 
    #   limits:
    #     cpu: "20m"
    #     memory: "128Mi"
  restartPolicy: Always
