day-15/disallow-rootuser.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
          - Pod
    exclude:
      resources:
        namespaces:
        - default
    validate:
      message: "não é possivel rodar esse pod como root."
      pattern:
        spec:
        containers:
        - securityContext:
            runAsNonRoot: true
