day-15/require-resources-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata: 
  name: require-resources-limits
spec:
  validationFailureAction: Enforce
  rules:
  - name: validate-limits
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Todos os pods devem ter limites de recursos definidos."
      pattern:
        spec:
          containers:
          - name: "*"
            resources:
              limits:
                cpu: "?*"
                memory: "?*"
